--- a/Galeri.html
+++ b/Galeri.html
@@ -18,7 +18,7 @@
 
 <body>
     <div id="social">
-        <font>PAYLASTIKCA | <span>Bilgi Paylastikca Cogalir...</span></font>
+        <font>PAYLASTIKCA | <span>Bilgi Paylastikca Çogalır..</span></font>
 
 
 
